2003-12-11  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/libnr/nr-stroke.c (nr_bpath_stroke_bbox_union): Implement

2003-12-10  John Stracke  <francis@REMOVE_THISthibault.org>

	* src/dialogs/export.c (sp_export_area_toggled): Use visual bbox

	* src/sp-shape.c (sp_shape_bbox): Use visual bbox, if requested

	* src/sp-marker.c (sp_marker_union_bbox): New method

2003-12-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/xml/repr-util.c (sp_repr_lookup_child_by_name): New method

	* src/main.c (sodipodi_segv_handler): Moved here

	* src/modules/gnome.c (sp_module_print_gnome_write): Implement

	* src/modules/kde.cpp (sp_module_print_kde_write): Implement

	* src/modules/win32.c (sp_module_print_win32_write): Implement

	* src/modules/ps.c (sp_module_print_plain_write): Implement

	* src/module.c (sp_modules_menu_new): New method
	(sp_modules_menu_about_new): Ditto
	(sp_modules_menu_append_node): Ditto
	(sp_modules_menu_about_append): Ditto
	(sp_modules_menu_action_append): Ditto
	(sp_modules_menu_action_activate): Ditto
	(sp_modules_init): Register everything internal
	(sp_module_setup): New method
	(sp_module_write): Ditto

2003-12-04  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/desktop.c (sp_desktop_prepare_shutdown): Fixed a bug which
	is caused when application exit, if text selection is empty in
	text-context
	
	* src/sodipodi.c (DESKTOP_IS_ACTIVE): Improved robustness

	* src/sp-text.c: src/sp-text.h (sp_string_release):
	New text content stuff which works with SP_TEXT_NEW_CONTENT macro
	(sp_string_read_content): Ditto
	(sp_string_set_shape): Ditto
	(sp_text_get_cursor_coords): Ditto

	* src/libnrtype/nr-glyphs.c (nr_pgl_new_from_string): Add
	terminator glyph

	* src/libnrtype/nr-glyphs.h (NRPosGlyph): Add typedef

2003-11-30  Lauris Kaplinski  <lauris@kaplinski.com>

	* configure.in: Version 0.33

	* src/libarikkei/arikkei-iolib.c: New file

	* src/libarikkei/arikkei-iolib.h: New file

2003-11-29  Mitsuru Oka  <oka326@parkcity.ne.jp>
